--- a/firstproject/build.gradle
+++ b/firstproject/build.gradle
@@ -4,7 +4,15 @@
  * This is a general purpose Gradle build.
  * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.2/samples
  */
-
+    println 'START'
  task firstTask{
      println 'Gradle frumi!!!'
+     doFirst(){
+         println 'doFirst'
+     }
+     doLast(){
+    println 'doLast'
+     }
  }
+
+println 'END'
